2003-01-0 James Turner <james@worldforge.org>

	* Added project files for Mac OS-X project builder. This produces
	  a framework called Atlas, whose's headers folder contains symlinks
	  so that standard Atlas include paths work correctly. If someone
	  knows how to make PB export headers into a subdirectory, please
	  inform me.

2002-07-20  Al Riddoch  <alriddoch@zepler.org>

	* Updated README, bumped up version number, and release 0.4.5.

2002-06-11  Al Riddoch  <alriddoch@zepler.org>

	* configure.in: Fix typos in configure.in

2002-06-10  Al Riddoch  <alriddoch@zepler.org>

	* Fixed rpm dependencies. I think the spec is now done.

2002-06-10  Al Riddoch  <alriddoch@zepler.org>

	* Fixes to rpm spec, and modify the way interface versioning is
	  set up, so it is handled more automaically, and used correctly.

2002-06-10  Al Riddoch  <alriddoch@zepler.org>

	* Add a new cleanly generated rpm spec, with devel subpackage,
	  and sort out install process so doc files get installed.

2002-05-21  Michael Koch  <konqueror@gmx.de>

	* configure.in: added --enable-debug.
	
2002-05-19  Al Riddoch  <alriddoch@zepler.org>

	Many of the changes described here were submitted by Jesse Jones
	in January. Thanks to Jesse for submitting the changes, and apologies
	for delaying them so long.

	* src/Bridge.h: Make MapBegin and ListBegin easier to read.

	* src/Codecs/Packed.cc, src/Codecs/XML.cc, src/Net/Stream.cc:
	  Work around the problem that in_avail() sometimes returns < 0 on
	  some systems.

	* src/Codecs/Packed.h, src/Codecs/XML.h:
	  Remove extraneous trailing comma from enumerations.

	* src/Message/Encoder.h: Ensure that methods from base class are
	  not hidden.

	* src/Net/Stream.cc: Make get_line functions static.

2002-05-15  Michael Koch  <konqueror@gmx.de>

	* atlas-config.in: dont output /usr/include when called with --cflags

2002-05-02  Al Riddoch  <alriddoch@zepler.org>

	* src/Objects/gen_cc.py, src/Objects/Entity/Entity.cc,