@@ -3,7 +3,7 @@ lib_LTLIBRARIES = libAtlasFunky.la
 
 libAtlasFunky_la_LDFLAGS = -version-info @ATLAS_INTERFACE_VERSION_INFO@
 
-libAtlasFunkyincludedir = $(includedir)/Atlas/Funky
+libAtlasFunkyincludedir = $(includedir)/Atlas-C++-0.4/Atlas/Funky
 
 libAtlasFunky_la_SOURCES = \
         Encoder.cc
