@@ -4,7 +4,7 @@ lib_LTLIBRARIES = libAtlasObjectsEntity.la
 
 libAtlasObjectsEntity_la_LDFLAGS = -version-info @ATLAS_INTERFACE_VERSION_INFO@
 
-libAtlasObjectsEntityincludedir = $(includedir)/Atlas/Objects/Entity
+libAtlasObjectsEntityincludedir = $(includedir)/Atlas-C++-0.4/Atlas/Objects/Entity
 
 libAtlasObjectsEntity_la_SOURCES = \
 	Entity.cc
