@@ -4,7 +4,7 @@ lib_LTLIBRARIES = libAtlasObjectsOperation.la
 
 libAtlasObjectsOperation_la_LDFLAGS = -version-info @ATLAS_INTERFACE_VERSION_INFO@
 
-libAtlasObjectsOperationincludedir = $(includedir)/Atlas/Objects/Operation
+libAtlasObjectsOperationincludedir = $(includedir)/Atlas-C++-0.4/Atlas/Objects/Operation
 
 libAtlasObjectsOperation_la_SOURCES = \
         Operation.cc
