@@ -41,12 +41,10 @@ while test $# -gt 0; do
       echo @ATLAS_VERSION@
       ;;
     --cflags)
-      if test @includedir@ != /usr/include ; then
-          # Handle oddities in Win32 path handling (assumes prefix)
-          prefix=`echo ${prefix} | sed 's,^//\([A-Z]\),\1:,'`
+      # Handle oddities in Win32 path handling (assumes prefix)
+      prefix=`echo ${prefix} | sed 's,^//\([A-Z]\),\1:,'`
 
-          includes=-I@includedir@
-      fi
+      includes=-I@includedir@/Atlas-C++-0.4
       echo $includes @ATLAS_CFLAGS@
       ;;
     --libs)
