@@ -1,0 +1,10 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+
+Name: varconf
+Description: The Atlas protocol C++ implementation
+Version: @VERSION@
+Libs: -L${libdir} @ATLAS_LIBS@
+Cflags: -I${includedir}/Atlas-C++-0.4
