@@ -1,4 +1,8 @@
-2003-01-0 James Turner <james@worldforge.org>
+2003-01-30  Al Riddoch  <alriddoch@zepler.org>
+
+	* Added pkgconfig macro, and put installed headers into a subdir.
+
+2003-01-09 James Turner <james@worldforge.org>
 
 	* Added project files for Mac OS-X project builder. This produces
 	  a framework called Atlas, whose's headers folder contains symlinks
